feat: include crypto engine
For voice-related cryptography purposes, discord-luau now includes
a rust-based engine for encryption and decryption. Currently, here is
how it must be invoked

./discord-luau-crypto-engine [KEY] [NONCE] [PAYLOAD]

All arguments must be base64 encoded. The decrypted value is returned as
a base64 encoded string as well.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "luau-lsp.require.mode": "relativeToFile",
   "luau-lsp.require.directoryAliases": {
     "@lune/": "~/.lune/.typedefs/0.8.2/"
-  }
+  },
+  "rust-analyzer.linkedProjects": [
+    "Engines/crypto/Cargo.toml",
+  ]
 }
