--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "luau-lsp.require.mode": "relativeToFile",
+  "luau-lsp.inlayHints.variableTypes": true,
+  "luau-lsp.inlayHints.functionReturnTypes": true,
+  "luau-lsp.inlayHints.parameterNames": "all",
+  "luau-lsp.inlayHints.parameterTypes": true,
+  "luau-lsp.inlayHints.typeHintMaxLength": 50,
   "luau-lsp.require.directoryAliases": {
     "@lune/": "~/.lune/.typedefs/0.8.2/"
   }
