--- a/aftman.toml
+++ b/aftman.toml
@@ -6,3 +6,4 @@
 lune = "filiptibell/lune@0.8.2"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
 selene = "Kampfkarren/selene@0.27.1"
+moonwave = "evaera/moonwave@1.1.2"
