feature: stylua format + fix CI again

--- a/.github/workflows/pull-request-stylua.yml
+++ b/.github/workflows/pull-request-stylua.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: ok-nick/setup-aftman@v0.4.2
     - name: Generate Standard Library
       run: selene generate-roblox-std
-    - name: Run Selene
-      run: stylua --check --output-format Summary
+    - name: Run Stylua
+      run: stylua --check --output-format Summary Package
