--- a/.luaurc
+++ b/.luaurc
@@ -3,5 +3,15 @@
 	"lint": {
 		// Lints are handled by Selene
 		"*": false
+	},
+	"aliases": {
+		"@Builders": "Package/Classes/Builders",
+		"@Network": "Package/Classes/Network",
+		"@Objects": "Package/Classes/Objects",
+		"@Data": "Package/Data",
+		"@Enums": "Package/Enums",
+		"@Std": "Package/Std",
+		"@Utils": "Package/Utils",
+		"@Vendor": "Package/Vendor",
 	}
 }
