--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,9 @@
     "@Std": "Package/Std",
     "@Utils": "Package/Utils",
     "@Vendor": "Package/Vendor",
+
+    "@DiscordLuau": "Package",
+    "@Env": ".env.luau"
   },
 
   "[lua]": {
