--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 	"luau-lsp.inlayHints.typeHintMaxLength": 10,
 	"editor.formatOnSave": true,
 	"luau-lsp.require.directoryAliases": {
+		"@root/": ".",
 		"@lune/": "~/.lune/.typedefs/0.8.5/",
 		"@builders": "./packages/discord-luau/src/builders",
 		"@network": "./packages/discord-luau/src/network",
