--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,11 @@
   "luau-lsp.inlayHints.parameterNames": "all",
   "luau-lsp.inlayHints.parameterTypes": true,
   "luau-lsp.inlayHints.typeHintMaxLength": 50,
+//   "luau-lsp.fflags.override": {
+// 	"DebugLuauDeferredConstraintResolution": "true"
+//   },
   "luau-lsp.require.directoryAliases": {
-    "@lune/": "~/.lune/.typedefs/0.8.2/",
+    "@lune/": "~/.lune/.typedefs/0.8.5/",
 
     "@builders": "./packages/builders",
 		"@cdn": "./packages/cdn/src",
@@ -15,16 +18,10 @@
 		"@extensions": "./packages/extensions/src",
 		"@std-polyfills": "./packages/std-polyfills/src",
 		"@types": "./packages/types/src",
+		"@types-parser": "./packages/types-parser/src",
 		"@utils": "./packages/utils/src",
 		"@vendor": "./packages/vendor/src",
 		"@voice": "./packages/voice/src",
 		"@websocket": "./packages/websocket/src"
   },
-
-  "[lua]": {
-		"editor.formatOnSave": true
-	},
-	"[luau]": {
-		"editor.formatOnSave": true
-	},
 }
