feature: add complete API types for all Gateway interactions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,23 @@
 {
-  "luau-lsp.require.mode": "relativeToFile",
-  "luau-lsp.inlayHints.variableTypes": true,
-  "luau-lsp.inlayHints.functionReturnTypes": true,
-  "luau-lsp.inlayHints.parameterNames": "all",
-  "luau-lsp.inlayHints.parameterTypes": true,
-  "luau-lsp.inlayHints.typeHintMaxLength": 50,
-//   "luau-lsp.fflags.override": {
-// 	"DebugLuauDeferredConstraintResolution": "true"
-//   },
-  "luau-lsp.require.directoryAliases": {
-    "@lune/": "~/.lune/.typedefs/0.8.5/",
-
-    "@builders": "./packages/builders",
+	"editor.formatOnSave": true,
+	"luau-lsp.require.mode": "relativeToFile",
+	"luau-lsp.inlayHints.variableTypes": true,
+	"luau-lsp.inlayHints.functionReturnTypes": true,
+	"luau-lsp.inlayHints.parameterNames": "all",
+	"luau-lsp.inlayHints.parameterTypes": true,
+	"luau-lsp.inlayHints.typeHintMaxLength": 50,
+	"luau-lsp.require.directoryAliases": {
+		"@lune/": "~/.lune/.typedefs/0.8.5/",
+		"@builders": "./packages/builders",
 		"@cdn": "./packages/cdn/src",
 		"@classes": "./packages/classes/src",
 		"@core": "./packages/core/src",
 		"@extensions": "./packages/extensions/src",
 		"@std-polyfills": "./packages/std-polyfills/src",
-		"@types": "./packages/types/src",
-		"@types-parser": "./packages/types-parser/src",
+		"@api-types": "./packages/api-types/src",
 		"@utils": "./packages/utils/src",
 		"@vendor": "./packages/vendor/src",
 		"@voice": "./packages/voice/src",
 		"@websocket": "./packages/websocket/src"
-  },
+	},
 }
