--- a/aftman.toml
+++ b/aftman.toml
@@ -6,4 +6,5 @@
 lune = "filiptibell/lune@0.8.5"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
 selene = "Kampfkarren/selene@0.27.1"
+luau-lsp = "JohnnyMorganz/luau-lsp@1.31.0"
 moonwave = "evaera/moonwave@1.1.2"
