--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,11 +16,11 @@ jobs:
       - uses: ok-nick/setup-aftman@v0.4.2
       - name: Generate Standard Library
         run: selene generate-roblox-std
-      - name: Execute Formatter
-        run: lune run executeFormatter
-      - name: Execute Linter
-        run: lune run executeLinter
-      - name: Execute LSP
-        run: lune run executeLsp
-      - name: Execute Unit Tests
-        run: lune run executeTests
+      - name: Check formatting
+        run: lune run fmt
+      - name: Lint
+        run: lune run lint
+      - name: Typecheck
+        run: lune run analyze
+      - name: Run unit-tests
+        run: lune run test
