--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extern/frktest"]
 	path = extern/frktest
-	url = git@github.com:itsfrank/frktest.git
+	url = https://github.com/itsfrank/frktest.git
