--- a/aftman.toml
+++ b/aftman.toml
@@ -1,6 +1,6 @@
 [tools]
 luau-lsp = "JohnnyMorganz/luau-lsp@1.31.0"
-lune = "filiptibell/lune@0.8.6"
+lune = "lune-org/lune@0.8.6"
 moonwave = "evaera/moonwave@1.1.3"
 selene = "Kampfkarren/selene@0.27.1"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
