--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,8 @@
-name: Pull Request & Push CI
+name: CI
 
 on:
   push:
-    branches: ["*"]
   pull_request:
-    branches: ["*"]
-
   workflow_dispatch:
 
 jobs:
