chore(actions): break down CI into multiple jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,53 @@ on:
   workflow_dispatch:
 
 jobs:
-  generate:
+  fmt:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: ok-nick/setup-aftman@v0.4.2
-      - name: Generate Standard Library
-        run: selene generate-roblox-std
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install tooling
+        uses: CompeyDev/setup-rokit@v0.1.0
+        with:
+          cache: true
       - name: Check formatting
         run: lune run fmt
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: ["fmt"]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install tooling
+        uses: CompeyDev/setup-rokit@v0.1.0
+        with:
+          cache: true
       - name: Lint
         run: lune run lint
+  typecheck:
+    runs-on: ubuntu-latest
+    needs: ["lint"]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install tooling
+        uses: CompeyDev/setup-rokit@v0.1.0
+        with:
+          cache: true
       - name: Typecheck
         run: lune run analyze
+  test:
+    runs-on: ubuntu-latest
+    needs: ["typecheck"]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Install tooling
+        uses: CompeyDev/setup-rokit@v0.1.0
+        with:
+          cache: true
       - name: Run unit-tests
         run: lune run test
