chore(actions): setup lune typedefs in job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,5 +54,7 @@ jobs:
         uses: CompeyDev/setup-rokit@v0.1.0
         with:
           cache: true
+      - name: Setup lune typedefs
+        run: lune setup
       - name: Run unit-tests
         run: lune run test
