feat(WebSocket): test + implement support for multiple failure states

--- a/.luaurc
+++ b/.luaurc
@@ -10,8 +10,7 @@
 		"core": "./packages/core/src",
 		"extensions": "./packages/extensions/src",
 		"std-polyfills": "./packages/std-polyfills/src",
-		"types": "./packages/types/src",
-		"types-parser": "./packages/types-parser/src",
+		"api-types": "./packages/api-types/src",
 		"utils": "./packages/utils/src",
 		"vendor": "./packages/vendor/src",
 		"voice": "./packages/voice/src",
