chore(lune): use vscode settings for luau-lsp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,6 @@
 		"@vendor": "./packages/vendor/src",
 		"@voice": "./packages/voice/src",
 		"@websocket": "./packages/websocket/src",
-		"@frktest": "./extern/frktest/src",
+		"@frktest": "./extern/frktest/src"
 	}
 }
