--- a/rokit.toml
+++ b/rokit.toml
@@ -1,6 +1,6 @@
 [tools]
 luau-lsp = "JohnnyMorganz/luau-lsp@1.31.0"
 lune = "CompeyDev/lune@0.8.7"
-# moonwave = "evaera/moonwave@1.1.3"
+# moonwave-extractor = "evaera/moonwave@1.1.3"
 selene = "Kampfkarren/selene@0.27.1"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
