feature: implement & update BitFlag support

--- a/selene.toml
+++ b/selene.toml
@@ -1,6 +1,6 @@
 std = "lune"
 
 [lints]
-high_cyclomatic_complexity = "warn"
+high_cyclomatic_complexity = "allow"
 if_same_then_else = "allow"
 shadowing = "allow"
