fix: add 'pesde' to aftman.toml

--- a/aftman.toml
+++ b/aftman.toml
@@ -5,3 +5,4 @@ lune = "lune-org/lune@0.8.8"
 selene = "Kampfkarren/selene@0.27.1"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
 darklua = "seaofvoices/darklua@0.13.1"
+pesde = "pesde-pkg/pesde@0.5.0-rc.13"
