--- a/packages/api-types/pesde.toml
+++ b/packages/api-types/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/api_types"
 version = "0.1.0"
 description = "Discord-Luau Types - API Types for the Discord API."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["AsyncMatrix <catbob614@gmail.com>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
 
 includes = ["src/**", "pesde.toml"]
