--- a/packages/voice/pesde.toml
+++ b/packages/voice/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/voice"
 version = "0.1.0"
 description = "Discord Luau Voice - Implementation of the voice protocol for discord."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["AsyncMatrix <catbob614@gmail.com>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
 
 includes = ["src/**", "pesde.toml"]
