--- a/packages/async/pesde.toml
+++ b/packages/async/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/async"
 version = "0.1.0"
 description = "Discord-Luau Async - Middleground between a Promise & Future, providing a way to handle asynchronous code."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["AsyncMatrix <catbob614@gmail.com>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
 
 includes = ["src/**", "pesde.toml"]
