--- a/packages/classes/pesde.toml
+++ b/packages/classes/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/classes"
 version = "0.1.0"
 description = "Discord-Luau Classes - Objects that wrap around various discord API structures."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["AsyncMatrix <catbob614@gmail.com>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
 
 includes = ["src/**", "pesde.toml"]
