--- a/packages/bit/pesde.toml
+++ b/packages/bit/pesde.toml
@@ -1,5 +1,12 @@
 name = "discord_luau/bit"
 version = "0.1.0"
+description = "Discord-Luau Bit - Bit library for Luau. (supports 64bit for Discord Snowflakes!)"
+license = "MIT"
+authors = ["AsyncMatrix <catbob614@gmail.com>"]
+repository = "https://github.com/DiscordLuau/discord-luau"
+pesde_version = "0.5.0-rc.13"
+
+includes = ["src/**", "pesde.toml", "LICENSE"]
 
 [target]
 environment = "luau"
