--- a/packages/buffer/pesde.toml
+++ b/packages/buffer/pesde.toml
@@ -4,8 +4,9 @@ description = "Discord-Luau Buffer - Used to temporarily storing encoded data."
 license = "MIT"
 authors = ["AsyncMatrix <catbob614@gmail.com>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
+pesde_version = "0.5.0-rc.13"
 
-includes = ["src/**", "pesde.toml"]
+includes = ["src/**", "pesde.toml", "LICENSE"]
 
 [target]
 environment = "luau"
