--- a/packages/formdata/pesde.toml
+++ b/packages/formdata/pesde.toml
@@ -4,8 +4,9 @@ description = "Discord-Luau FormData - FormData implementation for luau."
 license = "MIT"
 authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
+pesde_version = "0.5.0-rc.13"
 
-includes = ["src/**", "pesde.toml"]
+includes = ["src/**", "pesde.toml", "LICENSE"]
 
 [indices]
 default = "https://github.com/daimond113/pesde-index"
