--- a/packages/state/pesde.toml
+++ b/packages/state/pesde.toml
@@ -4,8 +4,9 @@ description = "Discord-Luau State - contains the state for a discord bot."
 license = "MIT"
 authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
 repository = "https://github.com/DiscordLuau/discord-luau"
+pesde_version = "0.5.0-rc.13"
 
-includes = ["src/**", "pesde.toml"]
+includes = ["src/**", "pesde.toml", "LICENSE"]
 
 [target]
 environment = "lune"
