--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
   "luau-lsp.inlayHints.parameterTypes": true,
   "luau-lsp.inlayHints.typeHintMaxLength": 50,
   "luau-lsp.require.mode": "relativeToFile",
-  // "luau-lsp.fflags.override": {
-  //   "LuauTarjanChildLimit": "0",
-  //   "LuauTypeInferIterationLimit": "0",
-  // }
+  "luau-lsp.fflags.override": {
+    "LuauTarjanChildLimit": "0",
+    "LuauTypeInferIterationLimit": "0",
+  }
 }
