fix(shard): fix invalid zlib header detection

--- a/pesde.toml
+++ b/pesde.toml
@@ -3,8 +3,11 @@ version = "0.0.0"
 private = true
 license = "MIT"
 repository = "https://github.com/DiscordLuau/discord-luau"
-authors = ["Jack<https://github.com/4x8Matrix>", "Erica<https://github.com/CompeyDev>"]
 description = "A Discord API Wrapper for Luau"
+authors = [
+	"Jack<https://github.com/4x8Matrix>",
+	"Erica<https://github.com/CompeyDev>",
+]
 
 workspace_members = ["packages/*"]
 
@@ -16,3 +19,6 @@ default = "https://github.com/daimond113/pesde-index"
 
 [dev_dependencies]
 frktest = { name = "itsfrank/frktest", version = "^0.0.2", target = "lune" }
+
+[scripts]
+build = ".lune/build.luau"
