--- a/rokit.toml
+++ b/rokit.toml
@@ -3,3 +3,4 @@ luau-lsp = "JohnnyMorganz/luau-lsp@1.31.0"
 selene = "Kampfkarren/selene@0.27.1"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
 darklua = "seaofvoices/darklua@0.16.0"
+lune = "lune-org/lune@0.8.9"
