--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Install Pesde
+        uses: lumin-org/setup-pesde@v0.3.2
       - name: Install tooling
         uses: CompeyDev/setup-rokit@v0.1.0
         with:
@@ -54,6 +56,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Install Pesde
+        uses: lumin-org/setup-pesde@v0.3.2
       - name: Install tooling
         uses: CompeyDev/setup-rokit@v0.1.0
         with:
