fix(ci): fix luau-lsp error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,6 @@
   "luau-lsp.require.mode": "relativeToFile",
   "luau-lsp.fflags.override": {
     "LuauTarjanChildLimit": "0",
-    "LuauTypeInferIterationLimit": "0",
+    "LuauTypeInferIterationLimit": "0"
   }
 }
