--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Install Pesde
+      - name: Install pesde
         uses: lumin-org/setup-pesde@v0.3.2
       - name: Install tooling
         uses: CompeyDev/setup-rokit@v0.1.0
@@ -57,7 +57,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Install Pesde
+      - name: Install pesde
         uses: lumin-org/setup-pesde@v0.3.2
       - name: Install tooling
         uses: CompeyDev/setup-rokit@v0.1.0
