chore: fix authors section for each package

--- a/packages/api-types/pesde.toml
+++ b/packages/api-types/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/api_types"
 version = "0.0.1"
 description = "Discord-Luau Types - API Types for the Discord API."
 license = "MIT"
-authors = ["AsyncMatrix <catbob614@gmail.com>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/api-types"
 pesde_version = "0.5.2"
 
