--- a/packages/builders/pesde.toml
+++ b/packages/builders/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/builders"
 version = "0.0.1"
 description = "Discord-Luau Builders - Builders used to generate payloads that the discord API can parse."
 license = "MIT"
-authors = ["AsyncMatrix <catbob614@gmail.com>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/builder"
 pesde_version = "0.5.2"
 
