--- a/packages/classes/pesde.toml
+++ b/packages/classes/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/classes"
 version = "0.0.1"
 description = "Discord-Luau Classes - Objects that wrap around various discord API structures."
 license = "MIT"
-authors = ["AsyncMatrix <catbob614@gmail.com>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/classes"
 pesde_version = "0.5.2"
 
