--- a/packages/bit/pesde.toml
+++ b/packages/bit/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/bit"
 version = "0.0.1"
 description = "Discord-Luau Bit - Bit library for Luau. (supports 64bit for Discord Snowflakes!)"
 license = "MIT"
-authors = ["AsyncMatrix <catbob614@gmail.com>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/bit"
 pesde_version = "0.5.2"
 
