--- a/packages/buffer/pesde.toml
+++ b/packages/buffer/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/buffer"
 version = "0.0.1"
 description = "Discord-Luau Buffer - Used to temporarily storing encoded data."
 license = "MIT"
-authors = ["AsyncMatrix <catbob614@gmail.com>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/buffer"
 pesde_version = "0.5.2"
 
