--- a/packages/formdata/pesde.toml
+++ b/packages/formdata/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/formdata"
 version = "0.0.1"
 description = "Discord-Luau FormData - FormData implementation for luau."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/formdata"
 pesde_version = "0.5.2"
 
