--- a/packages/rest/pesde.toml
+++ b/packages/rest/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/rest"
 version = "0.0.1"
 description = "Discord-Luau Rest - providing calls to the discord HTTP Rest API"
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/rest"
 pesde_version = "0.5.2"
 
