--- a/packages/state/pesde.toml
+++ b/packages/state/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/state"
 version = "0.0.1"
 description = "Discord-Luau State - contains the state for a discord bot."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/state"
 pesde_version = "0.5.2"
 
