--- a/packages/stream/pesde.toml
+++ b/packages/stream/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/stream"
 version = "0.0.1"
 description = "Discord-Luau Stream - stream implementation used to navigate through strings."
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/stream"
 pesde_version = "0.5.2"
 
