--- a/packages/utilities/pesde.toml
+++ b/packages/utilities/pesde.toml
@@ -2,7 +2,7 @@ name = "discord_luau/util"
 version = "0.0.1"
 description = "Discord Luau Util - a variety of util functions"
 license = "MIT"
-authors = ["AsyncMatrix<https://github.com/4x8Matrix>"]
+authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/utilities"
 pesde_version = "0.5.2"
 
