--- a/packages/discord_luau/pesde.toml
+++ b/packages/discord_luau/pesde.toml
@@ -13,7 +13,7 @@ environment = "lune"
 lib = "src/init.luau"
 
 [indices]
-default = "https://github.com/daimond113/pesde-index"
+default = "https://github.com/pesde-pkg/index"
 
 [dependencies]
 std_polyfills = { workspace = "discord_luau/std_polyfills" }
