--- a/packages/voice/pesde.toml
+++ b/packages/voice/pesde.toml
@@ -13,4 +13,4 @@ environment = "lune"
 lib = "src/init.luau"
 
 [indices]
-default = "https://github.com/daimond113/pesde-index"
+default = "https://github.com/pesde-pkg/index"
