--- a/packages/formdata/pesde.toml
+++ b/packages/formdata/pesde.toml
@@ -6,7 +6,7 @@ authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/formdata"
 pesde_version = "0.5.2"
 
-includes = ["src/**", "pesde.toml", "LICENSE"]
+includes = ["src/**/*", "pesde.toml", "LICENSE"]
 
 [indices]
 default = "https://github.com/pesde-pkg/index"
