feat: Add util dependency from discord_luau/util

--- a/packages/websocket/pesde.toml
+++ b/packages/websocket/pesde.toml
@@ -16,6 +16,7 @@ lib = "src/init.luau"
 default = "https://github.com/pesde-pkg/index"
 
 [dependencies]
+util = { workspace = "discord_luau/util" }
 std_polyfills = { workspace = "discord_luau/std_polyfills" }
 api_types = { workspace = "discord_luau/api_types" }
 future = { name = "yetanotherclown/luau_futures", target = "luau", version = "2.0.0-beta.3" }
