chore(pkg, gitignore): remove lockfiles from ignore and fix `api_types`
* Package `discordluau/api_types` referenced a `bundled.luau` file as
  the library export although that was not present in the includes.
* Lockfiles should be committed for a workspace setup to prevent desync
  among contributors.

--- a/packages/api_types/pesde.toml
+++ b/packages/api_types/pesde.toml
@@ -6,7 +6,7 @@ authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/Master/packages/api_types"
 pesde_version = "0.5.2"
 
-includes = ["src/**/*", "pesde.toml", "LICENSE", "CONTRIBUTING.md"]
+includes = ["bundled.luau", "pesde.toml", "LICENSE", "CONTRIBUTING.md"]
 
 [target]
 environment = "lune"
