--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
   "luau-lsp.fflags.override": {
     "LuauTarjanChildLimit": "0",
     "LuauTypeInferIterationLimit": "0"
+  },
+  "luau-lsp.require.mode": "relativeToFile",
+  "luau-lsp.require.directoryAliases": {
+    "@lune/": "~/.lune/.typedefs/0.9.3/"
   }
 }
