--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         uses: lumin-org/setup-pesde@v0.4.1
         with:
           cache: true
+          version: 0.7.0-rc.4
       - name: Install tooling
         uses: CompeyDev/setup-rokit@v0.1.0
         with:
@@ -61,6 +62,7 @@ jobs:
         uses: lumin-org/setup-pesde@v0.4.1
         with:
           cache: true
+          version: 0.7.0-rc.4
       - name: Install tooling
         uses: CompeyDev/setup-rokit@v0.1.0
         with:
