fix: update lib field

--- a/packages/example/pesde.toml
+++ b/packages/example/pesde.toml
@@ -14,7 +14,7 @@ default = "https://github.com/pesde-pkg/index"
 
 [target]
 environment = "luau"
-lib = "src/init"
+lib = "src/init.luau"
 
 [dependencies]
 discord = { workspace = "discord_luau/discord_luau" }
