--- a/packages/buffer/pesde.toml
+++ b/packages/buffer/pesde.toml
@@ -10,7 +10,7 @@ includes = ["src/**/*", "pesde.toml", "LICENSE", "CONTRIBUTING.md"]
 
 [target]
 environment = "luau"
-lib = "src/init"
+lib = "src/init.luau"
 
 [indices]
 default = "https://github.com/pesde-pkg/index"
