--- a/packages/example/pesde.toml
+++ b/packages/example/pesde.toml
@@ -5,7 +5,7 @@ description = "Discord-Luau Example - Example/Test scripts for discord-luau."
 license = "MIT"
 authors = ["Async Matrix <hi@asyncmatrix.dev>"]
 repository = "https://github.com/DiscordLuau/discord-luau/tree/main/packages/formdata"
-pesde_version = "0.7.0-rc.7"
+pesde_version = "0.7.1"
 
 includes = ["src/**/*", "pesde.toml", "LICENSE", "CONTRIBUTING.md"]
 
@@ -20,3 +20,6 @@ lib = "src/init.luau"
 discord = { workspace = "discord_luau/discord_luau" }
 builders = { workspace = "discord_luau/builders" }
 classes = { workspace = "discord_luau/classes" }
+
+[patches]
+"yetanotherclown/luau_futures" = { "2.0.0-beta.3 luau" = "patches/yetanotherclown+luau_futures-2.0.0-beta.3+luau.patch" }
